[gd_scene load_steps=6 format=3 uid="uid://budj7a0vgihma"]

[ext_resource type="Script" path="res://ui/game_over.gd" id="1_4qe47"]
[ext_resource type="VideoStream" path="res://assets/game over bg.ogv" id="1_xe3am"]
[ext_resource type="FontFile" uid="uid://c1xbiljmbigao" path="res://assets/Godofthunder-0WO1P.ttf" id="2_0nr20"]
[ext_resource type="AudioStream" uid="uid://bwwk8015uh7p0" path="res://assets/audio/game-over-arcade-6435.mp3" id="4_wvxyu"]
[ext_resource type="AudioStream" uid="uid://6rmfjehbom3o" path="res://assets/audio/Enter & Back.mp3" id="5_7byrx"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qe47")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("1_xe3am")
volume_db = -80.0
autoplay = true
expand = true
loop = true

[node name="return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = 171.0
offset_right = 190.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0nr20")
theme_override_font_sizes/font_size = 50
text = "Return to Menu"

[node name="sfx_over" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wvxyu")

[node name="sfx_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7byrx")

[node name="winner" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 125.0
offset_right = 20.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.184314, 0.952941, 0.980392, 1)
theme_override_fonts/font = ExtResource("2_0nr20")
theme_override_font_sizes/font_size = 100

[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
